--- a/README
+++ b/README
@@ -372,6 +372,16 @@ If you need to control server from WAN it is better to connect to server's
 terminal via SSH (POSIX) or remote desktop (Windows) and then run
 nzbget-client-commands in this terminal.
 
+Post processing scripts
+-----------------------
+
+After the download of nzb-file is completed nzbget can call post-process-script, 
+defined in configuration file. See example configuration file for the 
+description of parameters passed to the script.
+
+An example script for unraring of downloaded files are provided in file
+postprocess-example.sh. That example is for POSIX systems (not for Windows).
+
 =====================================
 8. Authors
 =====================================
