updated version string and ChangeLog (preparing to release 0.5.1)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@229 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+nzbget-0.5.1:
+  - improved the check of server responses to prevent unnecessary retrying
+    if the article does not exist on server;
+  - fixed: seg.fault in standalone mode if used without specifying the
+    category (e.g. without switch <-K>);
+  - fixed: download speed indicator could report not-null values in
+    standby-mode (when paused);
+  - fixed: parameter <category> in JSON/XML-RPC was not properly decoded by
+    server, making the setting of a nested category (containing slash or
+    backslash character) via nzbgetweb not possible;
+    
 nzbget-0.5.0:
   - added TLS/SSL-support for encrypted communication with news-servers;
   - added IPv6-support for communication with news-servers as well as for
