updated version string
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@231 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-0.6.0-testing:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+
 nzbget-0.5.1:
   - improved the check of server responses to prevent unnecessary retrying
     if the article does not exist on server;
