--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+nzbget-0.7.0-testing:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
 nzbget-0.6.0:
   - added scheduler; new options <TaskX.Time>, <TaskX.WeekDays>,
     <TaskX.Command>, <TaskX.DownloadRate> and <TaskX.Process>;
