--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-0.8.0-testing:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+   
 nzbget-0.7.0:
   - added history: new option <KeepHistory>, new remote subcommand <H> for
     commands <L> (list history entries) and <E> (delete history entries,
