corrected the address of Free Software Foundation in copyright notice; corrected the spelling of authors name (caused by new rules for translating of cyrillic names to latin alphabet / english spelling)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@397 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/README
+++ b/README
@@ -420,7 +420,7 @@ NZBGet was initialiy written by Sven Henkel (sidddy@users.sourceforge.net).
 Up to version 0.2.3 it was developed and maintained by Bo Cordes Petersen 
 (placebodk@users.sourceforge.net). 
 
-Beginning at version 0.3.0 the program is being developed by Andrei Prygounkov 
+Beginning at version 0.3.0 the program is being developed by Andrey Prygunkov 
 (hugbug@users.sourceforge.net).
 
 Module TLS (TLS.c, TLS.h) is based on work by Martin Lambers (marlam@marlam.de).
