updated version string to 0.9.0-testing
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@410 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-0.9.0-testing:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+
 nzbget-0.8.0:
   - added priorities; new action <I> for remote command <--edit/-E> to set
     priorities for groups or individual files; new actions <SetGroupPriority>
